--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,6 +20,10 @@ jobs:
           path: data
           ref: data
         continue-on-error: true
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          cache: yarn
       - run: yarn
       - run: yarn run build
       - name: Deploy
