--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,25 +9,28 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - uses: actions/checkout@v3
         with:
           ref: main
-      - uses: actions/checkout@v3
-        with:
-          path: data
-          ref: data
-        continue-on-error: true
-      - uses: actions/setup-node@v2
+
+      - name: setup node
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
           cache: yarn
-      - run: yarn
-      - run: yarn run build
+
+      - name: install
+        run: yarn
+      - name: build
+        run: yarn run build
+      - name: preview
+        run: yarn run serve
+      - name: add nojekyll
+        run: touch ./out/.nojekyll
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./out
